Bug 1246855 (part 1) - Remove the in-advance measurement of CompartmentPrivates. r=terrence.

Measuring in advance confuses DMD. It's better to measure during reporting.
The next patch will reinstate the measurement, but during reporting.